--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,17 @@
-PORT=3001
+# Discord Configuration
+DISCORD_CLIENT_ID=your_client_id
+DISCORD_CLIENT_SECRET=your_client_secret
+DISCORD_REDIRECT_URI=http://localhost:5173/discord-callback
+DISCORD_SERVER_ID=your_server_id
+DISCORD_BOT_TOKEN=your_bot_token
+
+# Server Configuration
+PORT=3000
+NODE_ENV=development
+
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/jeelquest
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret
+JWT_EXPIRES_IN=7d
