--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,3 +23,27 @@ dist-ssr
 *.sln
 *.sw?
 .qodo
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
