feat: update dependencies and refactor routing structure
- Added Redux Toolkit, React Redux, React Toastify, and Redux to package dependencies.
- Refactored routing in App component to utilize useRoutes for cleaner route management.
- Updated Navbar and Sidebar components for improved layout and responsiveness.
- Enhanced Login and Register pages with better form handling and validation.
- Adjusted TypeScript configuration to include additional libraries.
-update and preparing login and register handeling , and fix the random behavior

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,6 +20,7 @@
     "moduleResolution": "bundler",
     "noEmit": true,
     "allowImportingTsExtensions": true,
-    "types": ["react", "react-dom"]
+    "types": ["react", "react-dom"],
+    "lib": ["dom", "dom.iterable", "esnext", "es2015"]
   }
 }
