--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,14 @@
     "watch": "nodemon"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "4.4.0",
-    "express": "5.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "express-jwt": "^8.5.1",
+    "mongoose": "^8.13.2",
     "morgan": "1.10.0"
   },
   "devDependencies": {
