--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "debug": "4.4.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "express-jwt": "^8.5.1",
     "mongoose": "^8.13.2",
     "morgan": "1.10.0"
